--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:value="@string/google_maps_key"/>
         <activity
             android:launchMode="singleTop"
-            android:name=".Activities.MainActivity.MainActivity"
+            android:name=".Activities.LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -56,8 +56,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activities.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:name=".Activities.MainActivity.MainActivity"
+            android:label="FindMe" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Activities.LoginActivity" />
         </activity>
         <activity
             android:name=".Activities.SignUpActivity"
